fix: add body default styles to fix dark mode color

--- a/packages/react-ui/tailwindcss/index.css
+++ b/packages/react-ui/tailwindcss/index.css
@@ -13,3 +13,10 @@
 
 @source "../src";
 @source "../dist";
+
+body {
+  font-size: var(--text-base);
+  line-height: var(--text-base--line-height);
+  color: var(--color-fg-normal);
+  background-color: var(--color-bg-normal);
+}
