--- a/website/src/root.css
+++ b/website/src/root.css
@@ -5,3 +5,9 @@
 
 @source "../src";
 @source "../.resolid/component-demo";
+
+html.dark .shiki,
+html.dark .shiki span {
+  color: var(--shiki-dark) !important;
+  background-color: var(--shiki-dark-bg) !important;
+}
